Corrected GitHub link

--- a/GDWeave/mods/TeaLovingLad.MOP/manifest.json
+++ b/GDWeave/mods/TeaLovingLad.MOP/manifest.json
@@ -10,6 +10,6 @@
     "Author": "Tea-Lovng Lad",
     "Version": "1.0.0",
     "Description": "A collection of mouths for your characters to yap with!",
-    "Homepage": "https://github.com/TeaLovingGerman/TeaLovingLad.MOP"
+    "Homepage": "https://github.com/TeaLovingGerman/TeaLovingLadMOP"
   }
 }
